# syncgdrive

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
docs/: AIDE.md  ANALYSE_FINAL_PRE_V1.md  Optimisation.md  UX_SYSTRAY.md  etat-actuel.md  plan-excellence.md
docs/V2/: 00_INDEX.md  01_CONFIG_V2.md  02_AUTH_OAUTH2.md  03_REMOTE_PROVIDER.md  04_HARDCODE_CLEANUP.md  05_PROGRESS_BANDWIDTH.md  06_RESILIENCE.md  07_UX_PREMIUM.md  08_DRY_RUN_TESTS.md  09_PACKAGING.md  10_QA_MANUAL_TESTS.md  PLAN_EXCELLENCE.md  etat-actuel.md  pre_developpement_V2.md
src/: config.rs  db.rs  ignore.rs  kio.rs  lib.rs  main.rs  migration.rs  notif.rs
src/auth/: google_auth.rs  mod.rs  oauth2.rs  storage.rs
src/engine/: bandwidth.rs  integrity.rs  mod.rs  offline.rs  rate_limiter.rs  scan.rs  watcher.rs  worker.rs
src/remote/: gdrive.rs  mod.rs  path_cache.rs
src/ui/: help_window.rs  icons.rs  mod.rs  scan_window.rs  settings.rs  tray.rs
src/utils/: mod.rs  path_display.rs
tests/: integration.rs
tests/integration/: helpers.rs  test_commands.rs  test_config.rs  test_conflicts.rs  test_dry_run.rs  test_migration.rs  test_offline.rs  test_scan.rs  test_watcher.rs
